<resources>
    <string name="app_name">Книга Вкусных Идей</string>
    <string name="uslovia">Подтверждая номер телефона, я соглашаюсь с <a href="1.ru">правилами работы сервиса</a> и <a href="1.ru">политикой обработки персональных данных</a></string>
    <string name="uslovia1">Подтверждая свои данные, я соглашаюсь с <a href="1.ru">правилами работы сервиса</a> и <a href="1.ru">политикой обработки персональных данных</a></string>
    <string name="auth">Авторизуйтесь но номеру телефона</string>
    <string name="nextstep">Продолжить</string>
    <string name="errorlogin">Не удается получить данные!</string>
    <string name="nointernet">Нет подключения к интернету!</string>
    <string name="noserver">Сервер не доступен!</string>
    <string name="registry">Регистрация</string>
    <string name="nik">Ник</string>
    <string name="noreg">В настоящий момент авторизация не доступна по техническим причинам. Но вкусные идеи для Вас доступны. Приносим извинения за доставленные неудобства.</string>
    <string name="errorotv">Произошла ошибка авторизации. Попробуйте снова.</string>
    <string name="enter">Введите код подтверждения, отправленный Вам по СМС</string>
    <string name="endstep">Подтвердить</string>
    <string name="zap1">Запросить код через</string>
    <string name="zap2">Запросить код еще раз</string>
    <string name="errorcode">Введен неверный код</string>
    <string name="error">Ошибка</string>
    <string name="verifycode">Срок действия кода истек. Запросите код еще раз.</string>
    <string name="pre">Превышено количество запросов с номера</string>
    <string name="ideas">Вкусные идеи</string>
    <string name="newfrom">Новое у друзей</string>
    <string name="logout">Выйти</string>
    <string name="home">Главная</string>
    <string name="search">Поиск</string>
    <string name="add">Добавить рецепт</string>
    <string name="chat">Чат</string>
    <string name="person">Личный кабинет</string>
    <string name="trend">Сегодня в тренде</string>
    <string name="avatar">Аватар</string>
    <string name="popup">Меню действий</string>
    <string name="photorecipe">Фотография рецепта</string>
    <string name="like">Лайк</string>
    <string name="fav">Избранное</string>
    <string name="tofav">Добавить в избранное</string>
    <string name="nopage">Страница не загружена</string>
    <string name="textnopage1">Попробуйте обновить страницу или</string>
    <string name="textnopage2">приходите позже</string>
    <string name="update">Обновить страницу</string>
    <string name="adaptive_banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="allscreen_banner_ad_unit_id">ca-app-pub-3940256099942544/1033173712</string>
    <string name="inrescipe_banner_ad_unit_id">ca-app-pub-3940256099942544/2247696110</string>
    <string name="tasty">Вкусные рецепты</string>
    <string name="share">Поделиться</string>
    <string name="subscribe">Подписаться</string>
    <string name="unsubscribe">Отписаться</string>
    <string name="cancel">Отмена</string>
    <string name="feedbacks">Отзывы</string>
    <string name="all_feedbacks">Все отзывы</string>
    <string name="nofriends">У Вас нет друзей</string>
    <string name="textnofriends1">Подпишитесь на авторов, чтобы</string>
    <string name="textnofriends2">видеть их рецепты и отзывы</string>
    <string name="without">Пропустить авторизацию</string>
    <string name="cont">Продолжить</string>
    <string name="noauto">Пропустив авторизацию, Вы не сможете подписываться на рецепты участников, ставить лайки, писать комментарии, оставлять отзывы и т.д.</string>
    <string name="change">Изменить фото</string>
    <string name="choose">Выбор фото</string>
    <string name="firstname">Имя</string>
    <string name="email">Почта</string>
    <string name="notspecified">Не указано обязательное поле</string>
    <string name="about">О себе</string>
    <string name="notvalidemail">Не верно указана почта</string>
    <string name="navigation_drawer_open">Открыта</string>
    <string name="navigation_drawer_close">Закрыта</string>
    <string name="indicator">Индикатор</string>
    <string name="description">Описание</string>
    <string name="ing">Ингредиенты</string>
    <string name="cook">Приготовление</string>
    <string name="comments">Отзывы</string>
    <string name="aboutauth">Об авторе</string>
    <string name="buy">Попробовать бесплатно 30 дней</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logo">Логотип</string>
    <string name="photo_ing">Фотография ингредиента</string>
    <string name="stepbystep">Пошаговый рецепт</string>
    <string name="types">Введите текст</string>
    <string name="send">Отправить комментарий</string>
    <string name="close">Закрыть меню</string>
    <string name="just_now">Только что</string>
    <string name="sec">Время приготовления</string>
    <string name="still">и еще</string>
    <string name="joined">Вступили в сообщество:</string>
    <string name="saved">Сохранено</string>
    <string name="savephoto">Сохранить изображение</string>
    <string name="copylink">Скопировать ссылку</string>
    <string name="text_share">Вкусный рецепт, который может Вам понравится в Книге Вкусных Идей!</string>
    <string name="instamessage">Instagram сообщение</string>
    <string name="instapost">Instagram</string>
    <string name="instastory">Instagram истории</string>
    <string name="viber">Viber</string>
    <string name="vkstory">ВКонтакте истории</string>
    <string name="vk">ВКонтакте</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="telegram">Telegram</string>
    <string name="ok">Одноклассники</string>
    <string name="still1">Еще</string>
    <string name="rate">Рейтинг</string>
    <string name="published">Опубликовал(а)</string>
    <string name="another">Другие рецепты от автора</string>
    <string name="write">Написать</string>
    <string name="subscribes">Подписчики</string>
    <string name="signed">Подписаны</string>
    <string name="default_notification_channel_id">RecipesChannel</string>
</resources>