<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:layout_marginTop="10dp"
    android:id="@+id/container"
    xmlns:mask="http://schemas.android.com/apk/res-auto"
    tools:context=".ProfileFirstActivity">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ru.slava.recipes.AvatarView.views.AvatarView
            android:id="@+id/avatar"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:contentDescription="@string/app_name"
            android:gravity="center"
            android:layout_marginTop="20dp"
            app:av_border_color="@color/white_50"
            app:av_border_width="2dp"
            android:src="@drawable/user1" />


        <Button
            android:id="@+id/change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change"
            style="?materialButtonOutlinedStyle"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"/>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:theme="@style/edit_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/firstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/firstname"
                android:inputType="textEmailAddress|text"/>

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:theme="@style/edit_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textEmailAddress"/>

        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:theme="@style/edit_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/about"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/about"
                android:inputType="textEmailAddress|textMultiLine"/>

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/updateinfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/endstep"
            style="@style/button_text"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"/>


    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/uslovia1"
        app:layout_anchor="@+id/linearLayout"
        app:layout_anchorGravity="bottom|center"
        android:textAppearance="@style/TextAppearance.MyTheme.Body2"
        android:layout_marginBottom="20dp"/>


</androidx.coordinatorlayout.widget.CoordinatorLayout>